# legal_brief_companion

./: LICENSE  README.md  app.py  index.html  main.py  pyproject.toml  requirements.txt  style.css
data/vector_store/: chroma.sqlite3
rag-assistant/: README.md  app.py  pyproject.toml
rag-assistant/src/ingestion/: document_loader.py
src/: app.py
src/config/: settings.py
src/embeddings/: embedder.py
src/ingestion/: document_loader.py  text_splitter.py
src/interface/: cli.py
src/legal_brief_companion/: app.py  ingest.py
src/legal_brief_companion/config/: settings.py
src/legal_brief_companion/llm/: chain.py  prompt_templates.py
src/legal_brief_companion/retrieval/: retriever.py  vector_store.py
src/legal_brief_companion/tests/: test_chain.py
src/llm/: chain.py  prompt_templates.py
src/loaders/: pdf_loader.py
src/processing/: chunker.py
src/retrieval/: retriever.py  vector_store.py
src/utils/: helpers.py
