[project]
name = "legal-brief-companion"
version = "0.1.0"
description = "A Python-based legal assistant that helps generate, summarize, and analyze legal briefs using AI-powered tools."
authors = [
    {name = "Getahune Wondemenhu Alemayhu getahune.alemayhu@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain-groq (>=0.3.8,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
