[tool.poetry]
name = "legal-brief-companion"
version = "0.1.0"
description = "A Python-based legal assistant that helps generate, summarize, and analyze legal briefs using AI-powered tools."
authors = ["Getahune Wondemenhu Alemayhu <getahune.alemayhu@example.com>"]

packages = [
    {include = "legal_brief_companion", from = "src"}
]
license = "MIT"
readme = "README.md"

keywords = ["legal", "AI", "assistant", "briefs", "summarization", "analysis"]
[tool.poetry.dependencies]
python = "^3.11"
langchain = "0.1.20"
langchain-community = "^0.0.38"
langsmith = "0.1.19"  #Compatible with langchain 0.1.20
groq = "^0.1.0"  # Replace with actual version if available
pypdf = "^3.17.0"
python-dotenv = "^1.0.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.9"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
