[tool.poetry]
name = "legal-brief-companion"
version = "0.1.0"
description = "A Python-based legal assistant that helps generate, summarize, and analyze legal briefs using AI-powered tools."
authors = ["Getahune Wondemenhu Alemayhu <getahune.alemayhu@example.com>"]

packages = [
    {include = "legal_brief_companion", from = "src"}
]
license = "MIT"
readme = "README.md"

keywords = ["legal", "AI", "assistant", "briefs", "summarization", "analysis"]
[tool.poetry.dependencies]
python = "^3.11"
groq = "^0.30"  # Replace with actual version if available
pypdf = "^3.17.0"
python-dotenv = "^1.0.0"
pydantic = "^2.11.9"
pydantic-settings = "^2.11.0"
langchain-core = "^0.3.76"
langsmith = "^0.4.31"
langchain-openai = "^0.3.33"
langchain = {extras = ["all"], version = "^0.3.27"}
langchain-community = "^0.3.30"
langchain-groq = "^0.3.8"
typer = "^0.19.2"
sentence-transformers = "^5.1.1"
langchain-huggingface = "^0.3.1"
chromadb = "^1.1.0"
langchain-chroma = "^0.2.6"
streamlit = "^1.50.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
